Processing all css files in src folder added

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Webpack test</title>
+    <link rel="stylesheet" href="body.min.css">
+    <link rel="stylesheet" href="styles.min.css">
+    <link rel="stylesheet" href="h2-font.min.css">
 </head>
 <body>
     <h1>CSS Webpack test</h1>
     <div class="window"></div>
-    <script src="bundle.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
